# fenwick-trees

./: .buildconfig  .gitignore  CMakeLists.txt  README.md  fenwick.cpp  in  test
generic_1D/include/: fenwick.h
generic_1D/src/: fenwick.cpp  main.cpp
include/generic_1D/: fenwick.hpp  fenwick_edit.hpp
include/normal_1D/: fenwick.hpp
non-generic-1D/: a.out  fenwick.cpp  test
normal_1D/src/: fenwick.cpp  main.cpp
